Fix resource file spacing and buttons

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -76,6 +76,7 @@ button {
   letter-spacing: 1px !important;
   font-family: 'Montserrat', sans-serif !important;
   font-weight: 600 !important;
+  font-size: 0.8em !important;
 }
 
 .download-btn {
@@ -236,6 +237,10 @@ span[id^="article"] {
 
 .map-loader {
   text-align: center;
+}
+
+.files:not(:last-child) {
+  padding-bottom: 15px;
 }
 
 /*=====================
